--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,29 +1,383 @@
 <head>
-  <link href="http://gmpg.org/xfn/11" rel="profile">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta http-equiv="content-type" content="text/html; charset=utf-8">
+  <meta charset="UTF-8">
+  <title>{{ site.title }}</title>
+  <link href="/avatar.png" rel="shortcut icon" type="image/x-icon" />
+  <link href='https://fonts.googleapis.com/css?family=Roboto+Mono:400,700' rel='stylesheet' type='text/css'>
+  <style>
+  body {
+    font: 16px/1.5em 'Roboto Mono', 'Consolas', 'Andale Mono', 'Monaco', 'Courier New', Courier, monospace;
+    padding: 1ch;
+    margin: 0;
+  }
+  body .username:after {
+    content: ' ✐';
+  }
+  body.index .username:after {
+    content: ' ⌂';
+  }
+  main, footer, body > header {
+    max-width: 64ch;
+    margin: auto;
+  }
+  main {
+    box-sizing: border-box;
+    padding: 1ch 0 2ch;
+    min-height: calc(100vh - 12ch);
+  }
+  h1 {
+    font-size: 1em;
+    font-weight: 700;
+  }
+  h1, .timestamp {
+    margin: 0;
+  }
+  a {
+    color: blue;
+    background-image: linear-gradient(to bottom,blue 75%,blue 75%);
+    text-shadow: -1px -1px 0 white,1px -1px 0 white,-1px 1px 0 white,1px 1px 0 white;
+    background-repeat: repeat-x;
+    background-size: 1px 1px;
+    background-position: 0 96%;
+    text-decoration: none;
+  }
+  .heading a {
+    color: black;
+    background-image: linear-gradient(to bottom,black 75%,black 75%);
+  }
+  .heading {
+    margin: 0 0 2ch;
+    padding: 0;
+  }
+  article.txt p {
+    white-space: pre-wrap;
+  }
+  .username a {
+    text-shadow: none;
+    background-image: none;
+    background-color: #333;
+    color: #EEE;
+    padding: 1ch;
+    border: 0;
+  }
+  hr {
+    border: 1px solid #ECECEC;
+  }
+  p {
+    margin: 1.5em 0;
+  }
+  h1, h2, h3, h4, h5, h6 {
+    font-size: 1em;
+  }
+  pre {
+    padding: 1ch;
+    background-color: #f4f4f4;
+    overflow-x: auto;
+  }
+  ul, ol {
+    padding-left: 0;
+  }
+  li > ul, li > ol {
+    padding-left: 2ch;
+  }
+  blockquote {
+    font-style: italic;
+    margin: 1.5em 2ch;
+  }
+  img {
+    max-width:100%;
+  }
+  footer a {
+    color: lightgrey;
+    background-image: linear-gradient(to bottom,lightgrey 75%,lightgrey 75%);
+  }
+  .tag {
+    color: #ff5722;
+  }
+  @media screen and (min-width:1367px) {
+    body {
+      font: 20px/1.75em 'Roboto Mono';
+    }
+    hr {
+      border: 4px solid #ECECEC;
+    }
+  }
 
-  <!-- Enable responsiveness on mobile devices-->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
+  /*
+  * Sidebar
+  *
+  * The sidebar is the drawer, the item we are toggling with our handy hamburger
+  * button in the corner of the page.
+  *
+  * This particular sidebar implementation was inspired by Chris Coyier's
+  * "Offcanvas Menu with CSS Target" article, and the checkbox variation from the
+  * comments by a reader. It modifies both implementations to continue using the
+  * checkbox (no change in URL means no polluted browser history), but this uses
+  * `position` for the menu to avoid some potential content reflow issues.
+  *
+  * Source: http://css-tricks.com/off-canvas-menu-with-css-target/#comment-207504
+  */
 
-  <title>
-    {% if page.title == "Home" %}
-      {{ site.title }}
-    {% else %}
-      {{ page.title }} &middot; {{ site.title }}
-    {% endif %}
-  </title>
+  /* Style and "hide" the sidebar */
+  .sidebar {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: -14rem;
+    width: 14rem;
+    visibility: hidden;
+    overflow-y: auto;
+    
+    color: rgba(255,255,255,.6);
+    background-color: #202020;
+    -webkit-transition: all .3s ease-in-out;
+            transition: all .3s ease-in-out;
+  }
+  @media (min-width: 30em) {
+    .sidebar {
+      font-size: .75rem; /* 14px */
+    }
+  }
 
-  <!-- CSS -->
-  <link rel="stylesheet" href="{{ site.baseurl }}public/css/poole.css">
-  <link rel="stylesheet" href="{{ site.baseurl }}public/css/syntax.css">
-  <link rel="stylesheet" href="{{ site.baseurl }}public/css/lanyon.css">
-  <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Serif:400,400italic,700|PT+Sans:400">
+  /* Sidebar content */
+  .sidebar a {
+    color: #fff;
+    background: none;
+    text-shadow: none;
+  }
+  .sidebar-item {
+    padding: 1rem;
+  }
+  .sidebar-item p:last-child {
+    margin-bottom: 0;
+  }
 
-  <!-- Icons -->
-  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site.baseurl }}public/avatar.png">
-  <link rel="shortcut icon" href="http://www.gravatar.com/avatar/9f5734a7063a4c48139f4999f3100167.png">
+  /* Sidebar nav */
+  .sidebar-nav {
+    border-bottom: 1px solid rgba(255,255,255,.1);
+  }
+  .sidebar-nav-item {
+    display: block;
+    padding: .5rem 1rem;
+    border-top: 1px solid rgba(255,255,255,.1);
+  }
+  .sidebar-nav-item.active,
+  a.sidebar-nav-item:hover,
+  a.sidebar-nav-item:focus {
+    text-decoration: none;
+    background-color: rgba(255,255,255,.1);
+    border-color: transparent;
+  }
 
-  <!-- RSS -->
-  <link rel="alternate" type="application/rss+xml" title="RSS" href="/atom.xml">
+  @media (min-width: 48em) {
+    .sidebar-item {
+      padding: 1.5rem;
+    }
+    .sidebar-nav-item {
+      padding-left:  1.5rem;
+      padding-right: 1.5rem;
+    }
+  }
+
+  /* Hide the sidebar checkbox that we toggle with `.sidebar-toggle` */
+  .sidebar-checkbox {
+    position: absolute;
+    opacity: 0;
+    -webkit-user-select: none;
+      -moz-user-select: none;
+            user-select: none;
+  }
+
+  /* Style the `label` that we use to target the `.sidebar-checkbox` */
+  .sidebar-toggle {
+    position: absolute;
+    top:  2.4rem;
+    left: 1rem;
+    display: block;
+    padding: .25rem .75rem;
+    color: #505050;
+    background-color: #fff;
+    border-radius: .25rem;
+    cursor: pointer;
+  }
+
+  .sidebar-toggle:before {
+    display: inline-block;
+    width: 1rem;
+    height: .75rem;
+    content: "";
+    background-image: -webkit-linear-gradient(to bottom, #555, #555 20%, #fff 20%, #fff 40%, #555 40%, #555 60%, #fff 60%, #fff 80%, #555 80%, #555 100%);
+    background-image:    -moz-linear-gradient(to bottom, #555, #555 20%, #fff 20%, #fff 40%, #555 40%, #555 60%, #fff 60%, #fff 80%, #555 80%, #555 100%);
+    background-image:     -ms-linear-gradient(to bottom, #555, #555 20%, #fff 20%, #fff 40%, #555 40%, #555 60%, #fff 60%, #fff 80%, #555 80%, #555 100%);
+    background-image:         linear-gradient(to bottom, #555, #555 20%, #fff 20%, #fff 40%, #555 40%, #555 60%, #fff 60%, #fff 80%, #555 80%, #555 100%);
+  }
+
+  .sidebar-toggle:active,
+  #sidebar-checkbox:focus ~ .sidebar-toggle,
+  #sidebar-checkbox:checked ~ .sidebar-toggle {
+    color: #fff;
+    background-color: #555;
+  }
+
+  .sidebar-toggle:active:before,
+  #sidebar-checkbox:focus ~ .sidebar-toggle:before,
+  #sidebar-checkbox:checked ~ .sidebar-toggle:before {
+    background-image: -webkit-linear-gradient(to bottom, #fff, #fff 20%, #555 20%, #555 40%, #fff 40%, #fff 60%, #555 60%, #555 80%, #fff 80%, #fff 100%);
+    background-image:    -moz-linear-gradient(to bottom, #fff, #fff 20%, #555 20%, #555 40%, #fff 40%, #fff 60%, #555 60%, #555 80%, #fff 80%, #fff 100%);
+    background-image:     -ms-linear-gradient(to bottom, #fff, #fff 20%, #555 20%, #555 40%, #fff 40%, #fff 60%, #555 60%, #555 80%, #fff 80%, #fff 100%);
+    background-image:         linear-gradient(to bottom, #fff, #fff 20%, #555 20%, #555 40%, #fff 40%, #fff 60%, #555 60%, #555 80%, #fff 80%, #fff 100%);
+  }
+
+  @media (min-width: 30.1em) {
+    .sidebar-toggle {
+      position: fixed;
+    }
+  }
+
+  @media print {
+    .sidebar-toggle {
+      display: none;
+    }
+  }
+
+  /* Slide effect
+  *
+  * Handle the sliding effects of the sidebar and content in one spot, seperate
+  * from the default styles.
+  *
+  * As an a heads up, we don't use `transform: translate3d()` here because when
+  * mixed with `position: fixed;` for the sidebar toggle, it creates a new
+  * containing block. Put simply, the fixed sidebar toggle behaves like
+  * `position: absolute;` when transformed.
+  *
+  * Read more about it at http://meyerweb.com/eric/thoughts/2011/09/12/.
+  */
+
+  .wrap,
+  .sidebar,
+  .sidebar-toggle {
+    -webkit-backface-visibility: hidden;
+        -ms-backface-visibility: hidden;
+            backface-visibility: hidden;
+  }
+  .wrap,
+  .sidebar-toggle {
+    -webkit-transition: -webkit-transform .3s ease-in-out;
+            transition: transform .3s ease-in-out;
+  }
+
+  #sidebar-checkbox:checked + .sidebar {
+    z-index: 10;
+    visibility: visible;
+  }
+  #sidebar-checkbox:checked ~ .sidebar,
+  #sidebar-checkbox:checked ~ .wrap,
+  #sidebar-checkbox:checked ~ .sidebar-toggle {
+    -webkit-transform: translateX(14rem);
+        -ms-transform: translateX(14rem);
+            transform: translateX(14rem);
+  }
+
+  video {
+    width: 100%;
+  }
+
+  .video-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 30px; height: 0; overflow: hidden;
+  }
+
+  .video-container.skinny {
+    padding-bottom: 43.076923%;
+  }
+
+  .video-container.slate {
+    padding-bottom: 50%;
+    margin-bottom: 1em;
+  }
+
+  .video-container iframe,
+  .video-container object,
+  .video-container embed {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+  .highlight {margin: 0; background: #222; color: white}
+  .highlight .hll { background-color: #ffffcc }
+  .highlight .c { color: #999988; font-style: italic } /* Comment */
+  .highlight .err { color: #a61717; background-color: #e3d2d2 } /* Error */
+  .highlight .k { color: white; font-weight: bold } /* Keyword */
+  .highlight .o { color: white; font-weight: bold } /* Operator */
+  .highlight .cm { color: #444; font-style: italic } /* Comment.Multiline */
+  .highlight .cp { color: #444; font-weight: bold; font-style: italic } /* Comment.Preproc */
+  .highlight .c1 { color: #444; font-style: italic } /* Comment.Single */
+  .highlight .cs { color: #444; font-weight: bold; font-style: italic } /* Comment.Special */
+  .highlight .gd { color: #000000; background-color: #ffdddd } /* Generic.Deleted */
+  .highlight .ge { color: #000000; font-style: italic } /* Generic.Emph */
+  .highlight .gr { color: #aa0000 } /* Generic.Error */
+  .highlight .gh { color: #999999 } /* Generic.Heading */
+  .highlight .gi { color: #000000; background-color: #ddffdd } /* Generic.Inserted */
+  .highlight .go { color: #888888 } /* Generic.Output */
+  .highlight .gp { color: #555555 } /* Generic.Prompt */
+  .highlight .gs { font-weight: bold } /* Generic.Strong */
+  .highlight .gu { color: #aaaaaa } /* Generic.Subheading */
+  .highlight .gt { color: #aa0000 } /* Generic.Traceback */
+  .highlight .kc { color: grey; font-weight: bold } /* Keyword.Constant */
+  .highlight .kd { color: grey; font-weight: bold } /* Keyword.Declaration */
+  .highlight .kn { color: grey; font-weight: bold } /* Keyword.Namespace */
+  .highlight .kp { color: grey; font-weight: bold } /* Keyword.Pseudo */
+  .highlight .kr { color: grey; font-weight: bold } /* Keyword.Reserved */
+  .highlight .kt { color: #445588; font-weight: bold } /* Keyword.Type */
+  .highlight .m { color: #009999 } /* Literal.Number */
+  .highlight .s { color: indianred } /* Literal.String */
+  .highlight .na { color: indianred } /* Name.Attribute */
+  .highlight .nb { color: indianred } /* Name.Builtin */
+  .highlight .nc { color: #445588; font-weight: bold } /* Name.Class */
+  .highlight .no { color: #008080 } /* Name.Constant */
+  .highlight .nd { color: #3c5d5d; font-weight: bold } /* Name.Decorator */
+  .highlight .ni { color: #800080 } /* Name.Entity */
+  .highlight .ne { color: #990000; font-weight: bold } /* Name.Exception */
+  .highlight .nf { color: #990000; font-weight: bold } /* Name.Function */
+  .highlight .nl { color: #990000; font-weight: bold } /* Name.Label */
+  .highlight .nn { color: #555555 } /* Name.Namespace */
+  .highlight .nt { color: #000080 } /* Name.Tag */
+  .highlight .nv { color: #008080 } /* Name.Variable */
+  .highlight .ow { color: #000000; font-weight: bold } /* Operator.Word */
+  .highlight .w { color: #bbbbbb } /* Text.Whitespace */
+  .highlight .mf { color: indianred } /* Literal.Number.Float */
+  .highlight .mh { color: indianred } /* Literal.Number.Hex */
+  .highlight .mi { color: indianred } /* Literal.Number.Integer */
+  .highlight .mo { color: indianred } /* Literal.Number.Oct */
+  .highlight .sb { color: indianred } /* Literal.String.Backtick */
+  .highlight .sc { color: indianred } /* Literal.String.Char */
+  .highlight .sd { color: indianred } /* Literal.String.Doc */
+  .highlight .s2 { color: indianred } /* Literal.String.Double */
+  .highlight .se { color: indianred } /* Literal.String.Escape */
+  .highlight .sh { color: indianred } /* Literal.String.Heredoc */
+  .highlight .si { color: indianred } /* Literal.String.Interpol */
+  .highlight .sx { color: indianred } /* Literal.String.Other */
+  .highlight .sr { color: #009926 } /* Literal.String.Regex */
+  .highlight .s1 { color: indianred } /* Literal.String.Single */
+  .highlight .ss { color: #990073 } /* Literal.String.Symbol */
+  .highlight .bp { color: #999999 } /* Name.Builtin.Pseudo */
+  .highlight .vc { color: #008080 } /* Name.Variable.Class */
+  .highlight .vg { color: #008080 } /* Name.Variable.Global */
+  .highlight .vi { color: #008080 } /* Name.Variable.Instance */
+  .highlight .il { color: #009999 } /* Literal.Number.Integer.Long */
+
+  .about-avatar {
+    float: left;
+    width: 3.2em;
+    margin: 0 1em 1em 0;
+  }
+
+  @media screen and (max-width:480px) {
+    .about-avatar {
+      width: 4.1em;
+    }
+  }
+  </style>
 </head>
