--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -4,31 +4,20 @@
 
 <!-- Toggleable sidebar -->
 <div class="sidebar" id="sidebar">
+  <div class="sidebar-item">
+    <p>{{ site.description }}</p>
+  </div>
+
   <nav class="sidebar-nav">
-    <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="/">Home</a>
-
-    {% comment %}
-      The code below dynamically generates a sidebar nav of pages with
-      `layout: page` in the front-matter. See readme for usage.
-    {% endcomment %}
-
-    {% assign pages_list = site.pages %}
-    {% for node in pages_list %}
-      {% if node.title != null %}
-        {% if node.layout == "page" %}
-          <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{ node.url }}">{{ node.title }}</a>
-        {% endif %}
-      {% endif %}
-    {% endfor %}
-
-    <a class="sidebar-nav-item" href="http://spamthe.net">Links</a>
-    <a class="sidebar-nav-item" href="{{ site.twitter }}">Twitter</a>
-    <a class="sidebar-nav-item" href="{{ site.github }}">GitHub</a>
+    <a class="sidebar-nav-item" href="/">Posts</a>
+    <a class="sidebar-nav-item" href="/tags">Tags</a>
+    <a class="sidebar-nav-item" href="/about">About</a>
+    <a class="sidebar-nav-item" href="https://github.com/lucascorleone">Github</a>
   </nav>
 
   <div class="sidebar-item">
     <p>
-      &copy; {{ site.time | date: '%Y' }}. All rights reserved.
+      &copy; {{ site.time | date: '%Y' }}. Power by Jekyll.
     </p>
   </div>
 </div>
