--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,10 +1,44 @@
----
-layout: default
----
+<!DOCTYPE html>
+<html lang="en">
+{% include head.html %}
+<body>
+  {% include sidebar.html %}
+  <header>
+    <p class="username"><a href="../" target="_self">Lucas</a></p>
+  </header>
+  <main>
+    <article class="md">
+      <header class="heading">
+        <h1>{{ page.title }}</h1>
+        <p class="timestamp">{{ page.date | date: "%b %e %Y" }}</p>
+        <hr>
+      </header>
+    
+    {{ content }}
+                                
+    </article>
+  </main>
+  <footer><a href="/" style="border:0">home</a> &nbsp;
+  <a href="/tags" style="border:0">tags</a> &nbsp;
+  <a href="/about">about</a> &nbsp;
+  <a href="https://github.com/lucascorleone">github</a></footer>
+  
+  <label for="sidebar-checkbox" class="sidebar-toggle"></label>
+  <script>
+  (function() { 
+    
+  var toggle = document.querySelector('.sidebar-toggle');
+  var sidebar = document.querySelector('#sidebar');
+  var checkbox = document.querySelector('#sidebar-checkbox');
+  document.addEventListener('click', function(e) {
+    var target = e.target;
+    if(!checkbox.checked ||
+        sidebar.contains(target) ||
+        (target === checkbox || target === toggle)) return;
+    checkbox.checked = false;
+  }, false);
+  
+  </script>
 
-<div class="page">
-  {% if page.skip_title != true %}
-    <h1 class="page-title">{{ page.title }}</h1>
-  {% endif %}
-  {{ content }}
-</div>
+</body>
+</html>
