--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,7 @@
 {% include head.html %}
 <body class="index"}">
   {% include sidebar.html %}
+  <p class="head-offset"></p>
   {{ content }}
   <label for="sidebar-checkbox" class="sidebar-toggle"></label>
 
