--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,6 +4,7 @@
 <body>
   {% include sidebar.html %}
   <header>
+    <p class="head-offset"></p>
     <p class="username"><a href="../" target="_self">Lucas</a></p>
   </header>
   <main>
