--- a/_includes/head.html
+++ b/_includes/head.html
@@ -59,6 +59,20 @@
     padding: 1ch;
     border: 0;
   }
+  header .username {
+    display: none;
+  }
+  .head-offset {
+    height: .75rem;
+  }
+  @media screen and (min-width:768px) {
+    header .username {
+      display: block;
+    }
+    .head-offset {
+      height: 0;
+    }
+  }
   hr {
     border: 1px solid #ECECEC;
   }
@@ -132,6 +146,7 @@
     -webkit-transition: all .3s ease-in-out;
             transition: all .3s ease-in-out;
   }
+  
   @media (min-width: 30em) {
     .sidebar {
       font-size: .75rem; /* 14px */
@@ -190,7 +205,7 @@
   /* Style the `label` that we use to target the `.sidebar-checkbox` */
   .sidebar-toggle {
     position: absolute;
-    top:  2.4rem;
+    top:  1.8rem;
     left: 1rem;
     display: block;
     padding: .25rem .75rem;
@@ -198,6 +213,11 @@
     background-color: #fff;
     border-radius: .25rem;
     cursor: pointer;
+  }
+  @media screen and (min-width:1367px) {
+   .sidebar-toggle {
+      top:  2.4rem;
+    }
   }
 
   .sidebar-toggle:before {
